chore(demo-app): fix aligned menu triggers and add make page scrollable (#8280)

--- a/src/demo-app/menu/menu-demo.scss
+++ b/src/demo-app/menu/menu-demo.scss
@@ -8,6 +8,6 @@
   }
 
   .end-icon {
-    align-items: flex-end;
+    justify-content: flex-end;
   }
 }
